--- a/app/assets/stylesheets/admin/cancellations.css.scss
+++ b/app/assets/stylesheets/admin/cancellations.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the admin/cancellations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// _admin_cancellation template
+
+.edit-btn {
+  width: 100%;
+  margin-top: 10px;
+}
+
