renamed some classes

--- a/app/views/admin/cancellations/day.html.erb
+++ b/app/views/admin/cancellations/day.html.erb
@@ -4,7 +4,7 @@
 
 <% unless @cancellations.blank? %>
   <div class='container-fluid'>
-    <div class="col-sm-6 col-sm-offset-3 table_container">
+    <div class="col-sm-6 col-sm-offset-3 table-container">
       <table class="table table-striped table-hover table-bordered">
         <tr>
           <th>n.</th>
