--- a/app/views/admin/cancellations/new.html.erb
+++ b/app/views/admin/cancellations/new.html.erb
@@ -21,7 +21,7 @@
 
         <div class="form-group">
             <%= label_tag :date, "Absence Date" %>
-            <%= text_field_tag :date, nil, placeholder: "ABSENCE DATE (mm/dd/yy)", value: next_date_formatted, class: 'form-control' %>
+            <%= text_field_tag :date, nil, placeholder: "(mm/dd/yy)", value: next_date_formatted, class: 'form-control form-date'%>
         </div>
 
         <div class="form-group">
