--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,9 +13,9 @@
 
 <% unless @user.created_cancellations.blank? %>
 
-  <h3 class="center">Absences and Makeups</h3>
 
-  <div class="col-sm-6 col-sm-offset-3 table_container">
+  <div class="center col-sm-6 col-sm-offset-3 table-container">
+    <h2>Absences and Makeups</h2>
     <table class="table table-striped table-hover table-bordered">
       <tr>
         <th>n.</th>
