--- a/app/views/admin/cancellations/day.html.erb
+++ b/app/views/admin/cancellations/day.html.erb
@@ -5,7 +5,7 @@
     <h1 class="center">Cancellations for <%=formatted_time%></h1>
 
 <% if @cancellations.blank? %>
-  <h2>Sorry, no cancellations today</h2>
+  <h2>Sorry, no cancellations today!</h2>
 <% else %>
       <table class="table table-striped table-hover table-bordered">
         <tr>
