--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
-<footer class="footer">
-  <small>
-    Makeup Scheduler by Juan Ortiz
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About", about_path%></li>
+<nav class="navbar navbar-fixed-bottom" id="footer">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav navbar-left">
+      <li>Makeup Scheduler by Juan Ortiz</li>
     </ul>
-  </nav>
-</footer>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Contact", about_path%></li>
+      </ul>
+  </div>
+</nav>
