--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
       <li>Makeup Scheduler by Juan Ortiz</li>
     </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Contact", about_path%></li>
+        <li><%= link_to "Contact", contact_path%></li>
       </ul>
   </div>
 </nav>
