updated view template

--- a/app/views/static_pages/contact.erb
+++ b/app/views/static_pages/contact.erb
@@ -1,4 +1,4 @@
-<% provide :title, 'About '%>
+<% provide :title, 'Contact '%>
 
-<h1>About</h1>
+<h1>Contact</h1>
 <h2>You can contact me at <b>juanfortizd@gmail.com</b> </h2>
