--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container-fluid">
+    <div class="container-fluid" id='main'>
     <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
       <% flash.each do |key, value| %>
         <%= content_tag(:div, value, class: "alert alert-#{key}") %>
