--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
       <% end %>
     </div>
       <%= yield %>
-      <%= debug(params) if Rails.env.development? %>
-      <%= debug("Admin: #{@current_user.has_role? :admin}") if Rails.env.development? && signed_in? %>
+      <%#= debug(params) if Rails.env.development? %>
+      <%#= debug("Admin: #{@current_user.has_role? :admin}") if Rails.env.development? && signed_in? %>
     </div>
     <%= render 'layouts/footer'%>
   </body>
