--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -120,6 +120,7 @@ h2 {
   position: static;
   border-top: 1px solid #eaeaea;
   min-height: 30px;
+  clear: both;
   .container-fluid {
     ul {
       list-style: none;
