--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
     </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Contact", contact_path%></li>
-        <li><%= link_to "Help", "#"%></li>
+        <li><%= link_to "Help", help_path %></li>
       </ul>
   </div>
 </nav>
