--- a/app/views/static_pages/_admin_help.html.erb
+++ b/app/views/static_pages/_admin_help.html.erb
@@ -4,12 +4,12 @@
 <p>Here is a description of the menus:</p>
 <ul class='help-page-list'>
   <li>
-    <p><b>All users</b>. This opton will display al list with all the users. Clicking in each user name will give access to the user's profile page and the list of absences and makeups. Also you can erase users if thay discontinue their lessons</p>
+    <p><b>All users</b>. This opton will display a list with all the users. Clicking in each user name will give access to the user's profile page and the list of absences and makeups. Also you can erase users if thay discontinue their lessons</p>
     <img src="http://i.imgur.com/g0Gmgep.png" title="source: imgur.com" />
   </li>
 
   <li>
-    <p><b>Admin Calendar</b> Apparently this calendar is similat to the other users calendar, but if you click on a date, you will land to a page showing up all the absences, with their corresponsent timeo, instrument, user that cancelled, and the person that is taking that spot.</p>
+    <p><b>Admin Calendar</b> Apparently this calendar is similar to the other users calendar, but if you click on a date, you will land on a page showing up all the absences, with their corresponsent time, instrument, user that cancelled, and the person that is taking that spot.</p>
     <img src="http://i.imgur.com/4oX8c3h.png?1" title="source: imgur.com" />
     <p>If you click on an absence, you will access a screen that allow the following actions:</p>
       <ul>
@@ -23,11 +23,11 @@
         <li>
           <p><b>make the absence available again (only if it was reverved before)</b></p>
         <img class="inline-img" src="http://i.imgur.com/Jcq2UTb.png" title="source: imgur.com" />
-        <p><b>Important note!</b>: erasing or editing an absence/makeup can produce inconsistencies in the user's count of cancellations/makeups. Editing and erasing absences/makeups is strongly discouraged and should be used in exceptional cases.</p>
+        <p><b>Important note!</b>: erasing or editing an absence/makeup can produce inconsistencies in the user's count of absences/makeups. Editing and erasing absences/makeups is strongly discouraged and should be used in exceptional cases.</p>
       </li>
       </ul>
-
   </li>
+
   <li>
     <p><b>Notification on behalf of a student</b>: The absence will be registered in the user's profile as if were notified by him/herself </p>
     <img src="http://i.imgur.com/0tW8b5c.png?1" title="source: imgur.com" />
