--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
         <% if signed_in? %>
           <%= render "layouts/admin_menu"  %>
           <li><%= link_to "Absence Notification", new_cancellation_path %></li>
-          <li><%= link_to "Available Makeups", cancellations_path %></li>
+          <li><%= link_to "Available Makeups", cancellations_path(current_date_url_matcher)%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name%> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
