--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -4,7 +4,7 @@
     <ul class="dropdown-menu" role="menu">
       <li><%= link_to "All Users", admin_users_path %></li>
       <li><%= link_to "Notification on behalf of a student", new_admin_cancellation_path %></li>
-      <li><%= link_to "Admin Calendar", admin_cancellations_path %></li>
+      <li><%= link_to "Admin Calendar", admin_cancellations_path(current_date_url_matcher) %></li>
     </ul>
   </li>
 <% end %>
