--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
       <div id="home-button-container">
         <% if signed_in?%>
           <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
-          <%= link_to "Available Makeups", cancellations_path, class: "btn btn-info new-cancellation-button" %>
+          <%= link_to "Available Makeups", cancellations_path(current_date_url_matcher), class: "btn btn-info new-cancellation-button" %>
         <% else %>
           <div id='sign-in-button'>
             <%= link_to "", "/auth/facebook", class: 'inner'%>
