--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -34,6 +34,16 @@ aside {
   margin-right: 10px;
 }
 
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px;
+  }
+}
+
 // admin user show
 
 .user-link {
