close #41 Business creation

--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -11,3 +11,13 @@
     border-bottom: 1px;
   }
 }
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+input {
+  height: auto !important;
+}
