--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Profile", current_user %></li>
               <li class="divider"></li>
-              <li><a href="#"><%= link_to "Logout", logout_path, method: "delete" %></a></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: "delete" %></li>
             </ul>
           </li>
         <% else %>
