--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -27,7 +27,8 @@
         </div>
         
         <div class="form-group">
-            <%= label_tag :school_code, "School Code:" %>
+            <%= label_tag :school_code, "School Code: " %>
+            <%= content_tag :p, "(Contact your school in order to get the school code)" %>
             <%= text_field_tag :school_code, nil, class: 'form-control' %>
         </div>
     
