--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,7 +31,7 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Sign in", "/auth/facebook" %></li>
+          <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
