updated fb login path

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
           <%= link_to "Available Makeups", cancellations_path(current_date_url_matcher), class: "btn btn-info new-cancellation-button" %>
         <% else %>
           <div class='sign-in-button'>
-            <%= link_to "", "/auth/facebook", class: 'inner'%>
+            <%= link_to "", "/users/auth/facebook", class: 'inner'%>
           </div>
         <% end %>
       </div>
