--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -31,6 +31,7 @@
         
         <div class="form-group">
             <%= label_tag :school_code, "School Code:" %>
+            <%= content_tag :p, "(Contact your school in order to get the school code)" %>
             <%= text_field_tag :school_code, nil, class: 'form-control' %>
         </div>
     
