--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <%= link_to "Makeup Scheduler", root_path, class: "navbar-text", id: "logo"%>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if signed_in? %>
+        <% if user_signed_in? %>
           <%= render "layouts/admin_menu"  %>
           <li><%= link_to "Absence Notification", new_cancellation_path %></li>
           <li><%= link_to "Available Makeups", cancellations_path(current_date_url_matcher)%></li>
@@ -27,7 +27,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Profile", current_user %></li>
               <li class="divider"></li>
-              <li><a href="#"><%= link_to "Logout", logout_path, method: "delete" %></a></li>
+              <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></a></li>
             </ul>
           </li>
         <% else %>
