--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,12 +26,13 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name%> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Change your password", edit_user_registration_path %></li>
               <li class="divider"></li>
               <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></a></li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Sign in", "/auth/facebook" %></li>
+          <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
