--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,24 +15,40 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+
         <%= link_to "Makeup Scheduler", root_path, class: "navbar-text", id: "logo"%>
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
+
           <%= render "layouts/admin_menu"  %>
+
           <li><%= link_to "Absence Notification", new_cancellation_path %></li>
+
           <li><%= link_to "Available Makeups", cancellations_path(current_date_url_matcher)%></li>
+
           <li class="dropdown">
+
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name%> <span class="caret"></span></a>
+
             <ul class="dropdown-menu" role="menu">
+
               <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Change your password", edit_user_registration_path %></li>
+
+              <% unless current_user.from_omniauth? %>
+                <li><%= link_to "Change your password", edit_user_registration_path %></li>
+              <% end %>
+
               <li class="divider"></li>
+
               <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></a></li>
             </ul>
           </li>
         <% else %>
+
           <li><%= link_to "Sign in", new_user_session_path %></li>
+          
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
