--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -14,6 +14,8 @@
   <%= link_to "Sign up", new_registration_path(resource_name) %><br />
 <% end -%>
 
+<%= link_to "Sign up your business", new_business_path %><br />
+
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 <% end -%>
