--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,8 +3,13 @@
     <h2>Bucktown Music<br/>Makeup Scheduler<br>
     <small>This application was designed to help you manage lesson cancellations</small></h2>
       <div id="home-button-container">
-        <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
-        <%= link_to "Available Makeups", cancellations_path(current_date_url_matcher), class: "btn btn-info new-cancellation-button" %>
+        <% if user_signed_in? %>
+          <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
+          <%= link_to "Available Makeups", cancellations_path(current_date_url_matcher), class: "btn btn-info new-cancellation-button" %>
+          <% else %>
+            <%= link_to "Sign in", new_user_session_path, class: "btn btn-primary new-cancellation-button" %>
+            <%=  %>
+          <% end %>
       </div>
   </div>
 </div>
