wiped out bucktown music image and name

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <!-- <a class="navbar-brand hidden-md hidden-lg hidden-sm" id="brand" href="#">M</a> -->
-      <a href="<%= root_url %>"><%= image_tag "bucktown_music_brand.png", id: "brand-logo" %></a>
+      <a href="<%= root_url %>"><%#= image_tag "bucktown_music_brand.png", id: "brand-logo" %></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
