--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
   <div class="jumbotron" id="home-jumbotron">
-    <h2>Bucktown Music<br/>Makeup Scheduler<br>
+    <h2>Makeup Scheduler<br>
     <small>This application was designed to help you manage lesson cancellations</small></h2>
       <div id="home-button-container">
         <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
